// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot test: EditableArea[site/pages/components/EditableArea/example-1-base.js] 1`] = `
<div>
  <pre>
    <span>
      input something
    </span>
  </pre>
  <textarea />
  
</div>
`;

exports[`Snapshot test: EditableArea[site/pages/components/EditableArea/example-2-controlled.js] 1`] = `
<div>
  <pre>
    <span>
      Input something
    </span>
  </pre>
  <textarea />
  
</div>
`;
